--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Dr. Meng Li"
-  avatar           : images/profile.png
+  avatar           : images/profile2.png
   bio              : "Associate Professor - Bauer Fellow"
   location         : "University of Houston"
   employer         :
